# python-bun-go-rust-perf-comparison

./: .gitignore  README.md
k6/: baseline.js  smoke.js  soak.js  stress.js
migrations/: 001_init.sql  migrate.sh
results/20260626_113803_all_baseline/: comparison.txt
results/20260626_113803_all_baseline/bun-hono/: k6_stdout.txt  k6_summary.json  pidstat.raw  summary.txt
results/20260626_113803_all_baseline/bun-http/: k6_stdout.txt  k6_summary.json  pidstat.raw  summary.txt
results/20260626_113803_all_baseline/go-fiber/: k6_stdout.txt  k6_summary.json  pidstat.raw  summary.txt
results/20260626_113803_all_baseline/go-gin/: k6_stdout.txt  k6_summary.json  pidstat.raw  summary.txt
results/20260626_113803_all_baseline/go-http/: k6_stdout.txt  k6_summary.json  pidstat.raw  summary.txt
results/20260626_113803_all_baseline/rust-actix/: k6_stdout.txt  k6_summary.json  pidstat.raw  (+1 more)
results/20260626_145218_all_smoke/: comparison.txt
results/20260626_150635_all_baseline/: comparison.txt
results/20260626_152323_all_stress/: comparison.txt
scripts/: lib.sh  run-all.sh  run-one.sh
servers/bun/: main.ts  package.json
servers/bun-hono/: main.ts  package.json
servers/bun-http/: main.ts
servers/go/: go.mod  main.go
servers/go-fiber/: go.mod  go.sum  main.go
servers/go-gin/: go.mod  go.sum  main.go
servers/go-http/: main.go
servers/rust-actix/: Cargo.toml
servers/rust-actix/src/: main.rs
servers/rust-axum/: Cargo.toml
servers/rust-axum/src/: main.rs
servers/rust-http/: Cargo.toml
stub/: go.mod  main.go
stub/data/: lorem_ipsum.json
(+105 files in other folders)
