[package]
name = "rust-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tower = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
async-stream = "0.3"
bytes = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres"] }

[profile.release]
opt-level = 3
